fixed alignment

--- a/src/components/projects/index.scss
+++ b/src/components/projects/index.scss
@@ -1,15 +1,16 @@
 #projects {
-  text-align: center;
-  font-size: 1.5em;
-  text-align: center;
-  padding-top: 50px;
+    text-align: center;
+    font-size: 1.5em;
+    text-align: center;
+    padding-top: 50px;
 }
 .projects-container {
-  margin-bottom: 150px;
+    margin-bottom: 150px;
 }
 .project-title {
-  font-size: 1.5em;
+    font-size: 1.5em;
+    padding-top: 2rem;
 }
 .project-description {
-  text-align: justify;
+    text-align: justify;
 }
